# page_analyzer

./: Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: python_ci.yml
page_analyzer/: app.py  db.py  normalize.py  utils.py  validate.py
page_analyzer/templates/:  url.html  index.html  url.html  urls.html
page_analyzer/templates/error/: 404.html  500.html
page_analyzer/templates/layouts/: base_layout.html
